# sifs

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASING.md
.github/workflows/: benchmarks.yml  ci.yml  clawhub-skill.yml  release-check.yml
0f/08404872e6/: metadata.json
0f/08404872e6/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
14/246818185e/: metadata.json
14/246818185e/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
2d/d25b139598/: metadata.json
2d/d25b139598/0/: content_hash.txt  metadata.json  prompt.txt
5b/d8f53b2b21/: metadata.json
5b/d8f53b2b21/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
6c/7eb74d7e2f/: metadata.json
81/f371690766/: metadata.json
benchmarks/: README.generated.md  plot_sifs_comparison.py  ripgrep_context_curve.py
benchmarks/results/: react-smoke.txt  sifs-context-curves.json  sifs-full.json  sifs-mode-bm25.json  sifs-mode-hybrid.json  sifs-mode-semantic.json
de/e346fe987d/: metadata.json
docs/: agent-integration.md  agent-native-scorecard.md  architecture.md  benchmark-report.md  benchmarks.md  cli.md  library.md  mcp.md
docs/ideation/: 2026-05-05-agent-native-integrations-ideation.md  oracle-ideas.md
docs/plans/: 2026-05-04-001-feat-daemon-first-agent-search-plan.md  2026-05-04-002-fix-mcp-stdio-compatibility-plan.md  2026-05-05-001-feat-agent-native-cli-redesign-plan.md  2026-05-05-002-feat-cli-first-agent-skill-installer-plan.md  2026-05-05-003-feat-self-update-command-plan.md
ea/43bb8c1c72/: metadata.json
examples/: bench.rs
f3/94aad17134/: metadata.json
packaging/homebrew/: sifs.rb
scripts/: ci_release_check.py  clawhub_skill_sync.py
skills/sifs-search/: SKILL.md
src/: agent_artifacts.rs  agent_context.rs  agent_doctor.rs  agent_installer.rs  chunker.rs  dense.rs  feedback.rs  file_walker.rs  index.rs  lib.rs  main.rs  mcp.rs  metrics.rs  model2vec.rs  profiles.rs  ranking.rs  search.rs  sparse.rs  tokens.rs  types.rs  update.rs  utils.rs
src/agents/: mcp-instructions.md  sifs-search.md
src/daemon/: client.rs  manager.rs  mod.rs  paths.rs  protocol.rs  runtime.rs
tests/: benchmark_discipline.rs  cli.rs  core.rs  daemon.rs  mcp_stdio.rs  skill_parity.rs  typescript_relevance.rs
(+46 files in other folders)
