[package]
name = "sifs"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "SIFS Is Fast Search: instant local code search for agents"
license = "MIT"
repository = "https://github.com/tristanmanchester/sifs"
homepage = "https://github.com/tristanmanchester/sifs"
documentation = "https://docs.rs/sifs"
readme = "README.md"
keywords = ["code-search", "search", "bm25", "semantic", "agents"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
diagnostics = []

[dependencies]
anyhow = "1.0"
bincode = { version = "2.0", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
half = "2.7"
hf-hub = "0.4"
ignore = "0.4"
libc = "0.2"
ndarray = { version = "0.16", features = ["rayon", "serde"] }
once_cell = "1.21"
rayon = "1.10"
regex = "1.11"
safetensors = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
tree-sitter = "0.26"
tree-sitter-language-pack = "1.8.0-rc.26"

[[bin]]
name = "sifs"
path = "src/main.rs"

[[bin]]
name = "sifs-benchmark"
path = "src/bin/sifs-benchmark.rs"
required-features = ["diagnostics"]

[[bin]]
name = "sifs-embed"
path = "src/bin/sifs-embed.rs"
required-features = ["diagnostics"]
